Changes in Release 1.0.4 alpha

IMPORTANT NOTE: because of fix for bug #952453 the context parameter
javax.faces.application.CONFIG_FILES was changed to the spec-compliant
javax.faces.CONFIG_FILES. You have to modify your web.xml accordingly,
otherwise your config files will no longer be found and parsed.

* new renderedIfEmpty attribute for extended <x:dataTable> component (see tlddocs)
* bug #953783	h:commandLink renders value as text
* bug #955135	graphicImage tag
* bug #952453	Class FacesConfigFactoryBase search for wrong context-param
* bug #951988	myfaces doesn't read faces-config.xml in foo.jars
* bug #951896	command links broken if ALLOW_JAVASCRIPT=false
* bug #948629	UpdateActionListener looking for String -> Object converter
* bug #948626	hiddenInput does not decode and store value
* bug #948110	h:selectManyCheckbox styleClass handling
* bug #943587	<h:commandLink> does not recognize target attribute.
* many bugfixes ;-)

----------------------------------------------------------------------
Changes in Release 1.0.3 alpha
* commandLink javascript error bug fixed
* bug #943210 ("outputLink produces very long URLs that don't work") fixed
* bug #945118 ("Checkbox session state") fixed

----------------------------------------------------------------------
Changes in Release 1.0.2 alpha
* refactored custom components to net.sourceforge.myfaces.custom package
* custom message and messages component with new attributes summaryFormat and detailFormat
* replaced com.oreilly.servlet lib cos.jar by commons-codec for Base64 encoding
* fileupload component now uses commons-fileupload instead of com.oreilly.servlet lib cos.jar
* new tree component
* Weblogic startup issue now fixed when MyFacesServlet is used instead of FacesServlet
* validator attribute now supported
* many many bugfixes

----------------------------------------------------------------------
Changes in Release 1.0.1 alpha
* new DataList component (dynamical List based on UIData - see examples webapp)